# bell-inequality-gaia

./: .gitignore  AGENTS.md  PLAN.md  README.md  gaia.toml  package.py  pyproject.toml  review.toml
1935-bohr-reply-gaia/: .gitignore  pyproject.toml
1935-bohr-reply-gaia/src/1935_bohr_reply/: __init__.py  motivation.py  s2_complementarity.py
1935-bohr-reply-gaia/src/1935_bohr_reply/reviews/: self_review.py
1935-epr-paradox-gaia/: pyproject.toml
1935-epr-paradox-gaia/artifacts/: epr_1935_full_text.txt
1935-epr-paradox-gaia/src/1935_epr_paradox/: __init__.py  motivation.py  s2_two_particle.py
1935-epr-paradox-gaia/src/1935_epr_paradox/reviews/: self_review.py
1964-bell-inequality-gaia/: pyproject.toml
1964-bell-inequality-gaia/src/1964_bell_inequality/: __init__.py  motivation.py  s3_illustration.py  s4_contradiction.py
1964-bell-inequality-gaia/src/1964_bell_inequality/reviews/: self_review.py
1969-chsh-gaia/: .gitignore  pyproject.toml
1969-chsh-gaia/src/1969_chsh/: __init__.py
1969-chsh-gaia/src/1969_chsh/reviews/: self_review.py
artifacts/: README.md
artifacts/1935_bohr_reply/: bohr_1935_reply_full_text.txt
artifacts/1964_bell_inequality/: bell_1964_full_text.txt
artifacts/1969_clauser_chsh/: chsh_1969_full_text.txt
artifacts/2022_nobel/: nobel_2022_prize.txt
artifacts/phase2_bell_theorem/clauser_1969_chsh/: download_aps_papers.py
src/bell_inequality/: __init__.py  motivation.py  s2_epr_argument.py  s3_bohr_reply.py  s4_bell_1964.py  s5_chsh_1969.py
src/bell_inequality/reviews/: self_review.py
