[project]
name = "bell-inequality-gaia"
version = "0.1.0"
description = "Formalization of the EPR Paradox (1935) and the historical chain to Bell inequality experiments"
requires-python = ">=3.12"
authors = [{name = "NewtonTech"}]
license = "MIT"
keywords = ["quantum-physics", "bell-inequality", "epr-paradox", "gaia-lang", "local-realism"]

[tool.gaia]
type = "knowledge-package"
uuid = "e8f3a1b2-c4d5-4e6f-8a9b-0c1d2e3f4a5b"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
